// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldLevelHelp allows to specify mode content and close 1`] = `
<div>
  <label>
    Port Number
  </label>
  <FieldLevelHelp
    buttonClass="additionl-button-class"
    close={true}
    content="Enter Port number between the 4000-5000 range"
    id="fieldlevelname1"
    mode="popover"
    placement="top"
    rootClose={true}
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      overlay={
        <Popover
          bsClass="popover"
          id="popover"
          placement="right"
        >
          Enter Port number between the 4000-5000 range
        </Popover>
      }
      placement="top"
      rootClose={true}
      trigger={
        Array [
          "click",
        ]
      }
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        className="popover-pf-info additionl-button-class"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="popover-pf-info additionl-button-class btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Icon
            name="info"
            type="pf"
          >
            <PatternflyIcon
              className=""
              name="info"
            >
              <span
                aria-hidden="true"
                className="pficon pficon-info"
              />
            </PatternflyIcon>
          </Icon>
        </button>
      </Button>
    </OverlayTrigger>
  </FieldLevelHelp>
</div>
`;

exports[`FieldLevelHelp renders properly 1`] = `
<FieldLevelHelp
  buttonClass=""
  content={null}
  id="fieldlevelname1"
  placement="top"
  rootClose={true}
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="popover"
        placement="right"
      />
    }
    placement="top"
    rootClose={true}
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      className="popover-pf-info"
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="popover-pf-info btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <Icon
          name="info"
          type="pf"
        >
          <PatternflyIcon
            className=""
            name="info"
          >
            <span
              aria-hidden="true"
              className="pficon pficon-info"
            />
          </PatternflyIcon>
        </Icon>
      </button>
    </Button>
  </OverlayTrigger>
</FieldLevelHelp>
`;
